--- a/index.html
+++ b/index.html
@@ -632,6 +632,9 @@
     &copy; 2015 Zhang Teng
   
 </div>
+<div>
+    备案号：<a href="https://beian.miit.gov.cn/">京ICP备18024203号-1</a>
+</div>
 <div class="clearfix"></div>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256723815'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256723815%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></footer>
   
