--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <link rel="stylesheet" href="/css/highlight.css" type="text/css">
   <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script src="//ajax.useso.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js"></script>
 <script src="/js/jquery.imagesloaded.min.js"></script>
 <script src="/js/gallery.js"></script>
   
@@ -633,7 +633,7 @@
   
 </div>
 <div>
-    备案号：<a href="https://beian.miit.gov.cn/">京ICP备18024203号-1</a>
+    备案号：<a href="https://beian.miit.gov.cn/" target="_blank">京ICP备18024203号-1</a>
 </div>
 <div class="clearfix"></div>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256723815'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256723815%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></footer>
