add baidu site verification

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   
     <meta property="og:image" content="undefined"/>
+    <meta name="baidu-site-verification" content="codeva-yAmuYPRS4h" />
   
 
   <link href="/favicon.ico" rel="shortcut icon">
