--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   
     <meta property="og:image" content="undefined"/>
-    <meta name="baidu-site-verification" content="codeva-yAmuYPRS4h" />
+    <meta name="baidu-site-verification" content="codeva-8v0GwkiSsI" />
   
 
   <link href="/favicon.ico" rel="shortcut icon">
