--- a/birth/index.html
+++ b/birth/index.html
@@ -81,7 +81,7 @@
 
   <div class="container" id="main">
     <h1>腾腾 ❤️ 小胖</h1>
-    <h2>距离生日到来还有</h2>
+    <h2>距离小胖生日到来还有</h2>
     <div class="countdown" id="countdown">00:00:00</div>
     <div class="tap">轻点屏幕，有惊喜 ✨</div>
 
