--- a/birthcake/index.html
+++ b/birthcake/index.html
@@ -121,12 +121,12 @@
 
 <body>
     <!-- Birthday Greetings -->
-    <div style="position: absolute; top: 20px; left: 50%; transform: translateX(-50%); z-index: 1000; text-align: center; pointer-events: none;">
-        <h1 style="font-size: 2.5rem; font-weight: bold; color: #ffd700; text-shadow: 0 0 10px rgba(255, 215, 0, 0.5); margin-bottom: 10px;">
+    <div style="position: absolute; top: 10px; left: 50%; transform: translateX(-50%); z-index: 1000; text-align: center; pointer-events: none; width: 90%;">
+        <h1 style="font-size: clamp(1rem, 3.5vw, 1.8rem); font-weight: bold; background: linear-gradient(45deg, #ff80ab, #e040fb, #7c4dff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; text-shadow: 0 0 10px rgba(255, 128, 171, 0.5); margin-bottom: 5px; line-height: 1.2;">
             生日快乐！🎉<br>
             Happy Birthday to You
         </h1>
-        <div style="font-size: 2rem; color: #ffffff; text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);">
+        <div style="font-size: clamp(1rem, 3.5vw, 1.8rem); color: #ffffff; text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);">
             <span class="emoji-cake">🎂</span> <span class="emoji-balloon">🎈</span> <span class="emoji-gift">🎁</span> <span class="emoji-confetti">🎊</span>
         </div>
     </div>
