--- a/birthcake/index.html
+++ b/birthcake/index.html
@@ -111,9 +111,9 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/",
-                "@mediapipe/tasks-vision": "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/+esm"
+                "three": "https://cdn.mengze.vip/npm/three@0.160.0/build/three.module.js",
+                "three/addons/": "https://cdn.mengze.vip/npm/three@0.160.0/examples/jsm/",
+                "@mediapipe/tasks-vision": "https://cdn.mengze.vip/npm/@mediapipe/tasks-vision@0.10.3/+esm"
             }
         }
     </script>
@@ -122,7 +122,7 @@
 <body>
     <!-- Birthday Greetings -->
     <div style="position: absolute; top: 10px; left: 50%; transform: translateX(-50%); z-index: 1000; text-align: center; pointer-events: none; width: 90%;">
-        <h1 style="font-size: clamp(1rem, 3.5vw, 1.8rem); font-weight: bold; background: linear-gradient(45deg, #ff80ab, #e040fb, #7c4dff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; text-shadow: 0 0 10px rgba(255, 128, 171, 0.5); margin-bottom: 5px; line-height: 1.2;">
+        <h1 style="font-size: clamp(1rem, 3.5vw, 1.8rem); font-weight: bold; font-family: ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; background: linear-gradient(45deg, #ff80ab, #e040fb, #7c4dff); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; text-shadow: 0 0 10px rgba(255, 128, 171, 0.5); margin-bottom: 5px; line-height: 1.2;">
             生日快乐！🎉<br>
             Happy Birthday to You
         </h1>
