--- a/birthcake/index.html
+++ b/birthcake/index.html
@@ -6,7 +6,7 @@
     <title>Luxury Cake - Perfect Photo Position</title>
     
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Ma+Shan+Zheng&display=swap');
+        /* @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Ma+Shan+Zheng&display=swap'); */
 
         body { margin: 0; overflow: hidden; background-color: #020205; font-family: 'Cinzel', serif; touch-action: none; user-select: none; -webkit-user-select: none; }
         #canvas-container { width: 100vw; height: 100vh; position: absolute; z-index: 1; }
@@ -907,9 +907,9 @@
         }
 
         async function initMediaPipe() {
-            const vision = await FilesetResolver.forVisionTasks("https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.3/wasm");
+            const vision = await FilesetResolver.forVisionTasks("https://cdn.mengze.vip/npm/@mediapipe/tasks-vision@0.10.32/wasm");
             // handLandmarker = await HandLandmarker.createFromOptions(vision, { baseOptions: { modelAssetPath: `https://storage.googleapis.com/mediapipe-models/hand_landmarker/hand_landmarker/float16/1/hand_landmarker.task`, delegate: "GPU" }, runningMode: "VIDEO", numHands: 1 });
-            handLandmarker = await HandLandmarker.createFromOptions(vision, { baseOptions: { modelAssetPath: `https://221006.xyz/birthcake/hand_landmarker.task`, delegate: "CPU" }, runningMode: "VIDEO", numHands: 1 });
+            handLandmarker = await HandLandmarker.createFromOptions(vision, { baseOptions: { modelAssetPath: `https://221006.xyz/mediapipe-models/hand_landmarker/hand_landmarker.task`, delegate: "CPU" }, runningMode: "VIDEO", numHands: 1 });
             video = document.getElementById('webcam'); canvasCtx = document.getElementById('webcam-preview').getContext('2d'); drawingUtils = new DrawingUtils(canvasCtx);
             
             if (navigator.mediaDevices?.getUserMedia) {
